--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -73,72 +73,73 @@
   </div>
   <div class="pagina-principal">
    <div>
-    <img  class="fotos-cuadradas"src="../img/zara-sombreros-paja.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/sobrederafiayellowline.jpg" alt="COLECCION">
+    <img  class="fotos-cuadradas11 zoom"src="../img/zara-sombreros-paja.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas11 zoom" src="../img/sobrederafiayellowline.jpg" alt="COLECCION">
    </div>    
    <div>  
-    <img class="fotos-cuadradas" src="../img/zara-diadema-calida.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/vinchatrenzada.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/zara-diadema-calida.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/vinchatrenzada.jpg" alt="COLECCION">
    </div> 
    <div>
-    <img class="fotos-cuadradas"src="../img/pulserascoloresflecos.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/pulserasbohemias.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/accesorios-pulserasflecos-verano.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/accesorios-pulseraancla-verano.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/pulserascoloresflecos.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/pulserasbohemias.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/accesorios-pulseraancla-verano.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/tendenciaspanueloazul.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/tendenciacartera.jpg" alt="COLECCION">
    </div>  
      <h2>
       Liberá tu Creatividad
      </h2>
    <div>
-    <img  class="fotos-cuadradas"src="../img/pendientescruzdeestrella.jpg" alt="COLECCION">
+    <img  class="fotos-cuadradas zoom"src="../img/pendientescruzdeestrella.jpg" alt="COLECCION">
    </div>  
    <div>
-    <img class="fotos-cuadradas" src="../img/aaccesorios2-arosperlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/accesorios-arocolgantes-perlascascada.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-arosflorescascadablancas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/aaccesorios2-arosperlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/accesorios-arocolgantes-perlascascada.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesorios-arosflorescascadablancas.jpg" alt="COLECCION">
    </div>
    <div>
-    <img class="fotos-cuadradas"src="../img/accesorios-arosfloresblancas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/accesorios-arosfloresblancas.jpg" alt="COLECCION">
   </div>  
    <div>
-    <img class="fotos-cuadradas" src="../img/accesorios1-arosseisperlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-pendientescirculargrande-perlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-arosperlas-joyerinusual.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesorios1-arosseisperlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesorios-pendientescirculargrande-perlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesorios-arosperlas-joyerinusual.jpg" alt="COLECCION">
    </div>
    <div>
-    <img class="fotos-cuadradas"src="../img/accesorios-aroslargos-colgantes-isadora.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/accesorios-aroslargos-colgantes-isadora.jpg" alt="COLECCION">
   </div> 
   <div>
-    <img class="fotos-cuadradas"src="../img/accesorios-arosflorestranslucidas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/accesorios-arosflorestranslucidas.jpg" alt="COLECCION">
   </div> 
   <div>
-    <img class="fotos-cuadradas"src="../img/accesorioscollarperlasrojorosa.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/accesorioscollarperlasrojorosa.jpg" alt="COLECCION">
   </div> 
   <div>
-    <img class="fotos-cuadradas" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-gafasbatblack.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-viseras.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas12" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas13 " src="../img/accesorios-gafasbatblack.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas1 zoom" src="../img/accesorios-viseras.jpg" alt="COLECCION">
    </div>
    <div>
-    <img class="fotos-cuadradas" src="../img/accesoriosanillos-mariposascolores.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesoriosanillos-luxury.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-anillos-mariposacristal-dijevintage.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/accesorios-anillosmariposacalada.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesoriosanillos-mariposascolores.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesoriosanillos-luxury.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesorios-anillos-mariposacristal-dijevintage.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/accesorios-anillomariposacalada.jpg" alt="COLECCION">
   </div>
   <div>
-    <img class="fotos-cuadradas" src="../img/holdercelurosaamarillo.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/holdercelumamalove.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/holderceluhappy.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/holderceluazul.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/holdercelurosaamarillo.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/holdercelumamalove.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/holderceluhappy.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/holderceluazul.jpg" alt="COLECCION">
   </div>
   <div>
-    <img class="fotos-cuadradas"src="../img/holdercelu.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/holdercelu.jpg" alt="COLECCION">
   </div> 
   <div>
-    <img class="fotos-cuadradas" src="../img/hebillasperlas2.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/hebillasperlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/gorrabeisballredbatik.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/gorrabeisballred.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/hebillasperlas2.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/hebillasperlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/gorrabeisballredbatik.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom" src="../img/gorrabeisballred.jpg" alt="COLECCION">
   </div>
   </div>
  </main>
