--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -72,39 +72,50 @@
     <h2> INSPIRATE</h2>
    </div>
    <div class="pagina-principal">
-    <img  class="fotos-cuadradas"src="../img/unasprimaveramulticolor-pastel.jpg" alt="COLECCION">
-    <img  class="fotos-cuadradas"src="../img/esmaltesveranopasteles.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/colores-unas-moda.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/unas-primavera-verano-abstractas-base-transparente.jpg" alt="COLECCION">
+    <img  class="fotos-beauty"src="../img/unasprimaveramulticolor-pastel.jpg" alt="COLECCION">
+    <img  class="fotos-beauty"src="../img/esmaltesveranopasteles.jpg" alt="COLECCION">
+    <img class="fotos-beauty" src="../img/colores-unas-moda.jpg" alt="COLECCION">
+    <img class="fotos-beauty" src="../img/unas-primavera-verano-abstractas-base-transparente.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/unas-para-verano-2022.jpg" alt="COLECCION">
     <img class="fotos-cuadradas"src="../img/unasveranobe.jpg" alt="COLECCIÓN">
     <img class="fotos-cuadradas" src="../img/unascombinacionveranobe.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/unasazulbe.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/unasmetalizada.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/parfunarmaniocean.jpg" alt="COLECCION">
+    <img class="fotos-beauty1 efecto" src="../img/unasazulbe.jpg" alt="COLECCION">
+   </div>
+   <div>
+    <img class="fotos-beauty" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
+    <img class="fotos-beauty"src="../img/unasmetalizada.jpg" alt="COLECCION">
+   <div>
+    <img class="fotos-beauty1 efecto"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
+   </div> 
+   <div>
+    <img class="fotos-beauty1 efecto"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
+   </div>
+   <div>
+    <img class="fotos-cuadradas "src="../img/parfunarmaniocean.jpg" alt="COLECCION">
     <img class="fotos-cuadradas"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="https://dummyimage.com/300x150/c9c2af/fff" alt="COLECCION">
    </div>
    <div class="pagina-principal">
-    <img  class="fotos-cuadradas"src="../img/beauty-maxmixbvlgary.jpg" alt="COLECCION">
-    <img  class="fotos-cuadradas"src="../img/beauty-parfumbvlgariomnia-eau-de-toilette.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
+    <div>
+    <img  class="fotos-beauty1 efecto"src="../img/beauty-maxmixbvlgary.jpg" alt="COLECCION">
+   </div>
+    <img class="fotos-beauty" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-parfumomnia-pink-sapphire.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/beauty-parfumbvlgariomnia-by-mary-katrantzou.jpg" alt="COLECCIÓN">
-    <img class="fotos-cuadradas" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
+   <div>
+    <img  class="fotos-cuadradas zoom"src="../img/beauty-parfumbvlgariomnia-eau-de-toilette.jpg" alt="COLECCION">
+    <img class="fotos-beauty zoom" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas zoom"src="../img/beauty-parfumbvlgariomnia-by-mary-katrantzou.jpg" alt="COLECCIÓN">
+   </div> 
+    <img class="fotos-beauty1 imagen" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-parfumcacharel.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-flower-bykenzo.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-kenzo.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/beauty-calvinkleinwomenrosa.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/beauty-parfumlinterditrojogivenchy.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/beauty-parfumlinterdit-givenchy.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-parfumfragancias-de-Lacoste.jpg" alt="COLECCION">
+    <img class="fotos-beauty"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
+    <img class="fotos-beauty imagen"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
+    <img class="fotos-beauty"src="../img/beauty-calvinkleinwomenrosa.jpg" alt="COLECCION">
+    <img class="fotos-beauty efecto"src="../img/beauty-parfumlinterditrojogivenchy.jpg" alt="COLECCION">
+    <img class="fotos-beauty1"src="../img/beauty-parfumlinterdit-givenchy.jpg" alt="COLECCION">
+    <img class="fotos-beauty1 imagen" src="../img/beauty-parfumfragancias-de-Lacoste.jpg" alt="COLECCION">
    </div>
  </main>
 
