--- a/pages/newin.html
+++ b/pages/newin.html
@@ -77,7 +77,44 @@
   <div>
   <div class="card text-center">
     <div class="card-header">
-     <img src="../img/ingresoprimavera2022.jpg" alt="Be tendencias">  
+     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/tendenciaspanuelos.jpg" class="d-block w-100" alt="Tendencias">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/tendencias1verano.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/tendenciascarteras.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     </div>
     <div class="card-body">
       <h5 class="card-title">No te pierdas de nada</h5>
@@ -90,10 +127,10 @@
  
    
   <div class="pagina-principal">
-   <img class="fotos-cuadradas" src= ../img/look-palazzo-rosa-yagmour-verano-2023.jpg alt="NEW IN">
-   <img class="fotos-cuadradas" src=../img/newin-pantsancho-vestir-assira-2023.jpg alt="NEW IN">
-   <img  class="fotos-cuadradas"src= ../img/newinpantlila.jpg alt="NEW IN">
-   <img class="fotos-cuadradas" src= ../img/newinblazerlila.jpg alt="NEW IN">
+   <img class="fotos-newin" src= ../img/look-palazzo-rosa-yagmour-verano-2023.jpg alt="NEW IN">
+   <img class="fotos-newin1" src=../img/newin-pantsancho-vestir-assira-2023.jpg alt="NEW IN">
+   <img  class="fotos-newin"src= ../img/newinpantlila.jpg alt="NEW IN">
+   <img class="fotos-newin1" src= ../img/newinblazerlila.jpg alt="NEW IN">
   </div>
   <div class="producto">  
    <p class="producto">Pantalón</p> <p class="producto">Precio</p>
@@ -101,8 +138,8 @@
    <p class="producto">Pantalón</p> <p class="producto">Precio</p>
   </div>
   <div class="pagina-principal">
-   <img  class="fotos-cuadradas"src=../img/newin-topnegro-pantsrosa.jpg alt="NEW IN">
-   <img class="fotos-cuadradas"src=../img/newin-pantamarillopastel.jpg alt="NEW IN">
+   <img  class="fotos-newin2"src=../img/newin-topnegro-pantsrosa.jpg alt="NEW IN">
+   <img class="fotos-newin3"src=../img/newin-pantamarillopastel.jpg alt="NEW IN">
   </div>
   <div class="producto" >
    <p class="producto">Pantalón</p> <p class="producto">Precio</p>
@@ -110,9 +147,9 @@
    <p class="producto" >Pantalón</p> <p class="producto" >Precio</p>
   </div>
   <div>
-    <img class="fotos-cuadradas"src=../img/newin-naranjatotal.jpg alt="NEW IN">
-    <img class="fotos-cuadradas"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
-    <img class="fotos-cuadradas"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
+    <img class="fotos-newin4"src=../img/newin-naranjatotal.jpg alt="NEW IN">
+    <img class="fotos-newin5"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
+    <img class="fotos-newin5"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
    </div>
    <div class="producto" >
     <p class="producto">Pantalón</p> <p class="producto" >Precio</p>
