--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -101,12 +101,12 @@
    <H3>PROMOCION VALIDA DESDE EL 15 DE SEPTIEMBRE DE 2022 HASTA EL 3 DE SEPTIEMBRE DE 2022 O HASTA AGOTAR STOCK EN LA TIENDA ONLINE, LO QUE OCURRA PRIMERO. LOS DESCUENTOS SE APLICARAN SOBRE LOS PRECIOS DE HASTA EL 50% DE DESCUENTO Y DE HASTA 3 CUOTAS SIN INTERES.</H3>
   </div>
   <div class="pagina-principal promolooks">
-   <img class="fotos-promo" src= ../img/short-dorado-tucci.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo" src= ../img/promo-sacobeigepastel.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo" src= ../img/coleccion-joggingwhiterayonegro.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo" src= ../img/promo-remerablackblock.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo" src= ../img/promo-look9.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo" src= ../img/promo-look16.jpg alt="INSPIRACION LOOKS">
+   <img class="fotos-promo " src= ../img/short-dorado-tucci.jpg alt="INSPIRACION LOOKS">
+   <img class="fotos-promo promo" src= ../img/promo-sacobeigepastel.jpg alt="INSPIRACION LOOKS">
+   <img class="fotos-promo promo" src= ../img/coleccion-joggingwhiterayonegro.jpg alt="INSPIRACION LOOKS">
+   <img class="fotos-promo promo" src= ../img/promo-remerablackblock.jpg alt="INSPIRACION LOOKS">
+   <img class="fotos-promo promo" src= ../img/promo-look9.jpg alt="INSPIRACION LOOKS">
+   <img class="fotos-promo promo" src= ../img/promo-look16.jpg alt="INSPIRACION LOOKS">
   </div>
  </main>
 
