--- a/index.html
+++ b/index.html
@@ -21,36 +21,36 @@
    <div class="header-banner">
     <b> Envío gratis desde $10.000</b>
    </div>
-    <!-- logo/Home -->
+   <!-- logo/Home -->
      <a href=""><img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE"></a>
   </header>
-   <div>
-    <nav id="nav"  class="nav">
-     <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-     <label for="abrir-cerrar" class="toggle-button">
-      <span class="cerrar" title="Cerrar">Cerrar</span>
-      <span class="abrir" title="Abrir">Abrir</span>
-     </label>
-     <!-- Listas y links de Navegación -->
-     <ul class="nav-menu">
-      <li class="link">
-       <a class="link" href="pages/newin.html">NEW IN</a>
-      </li>
-      <li>
-       <a class="link olor-primary" href="pages/coleccion.html">COLECCION </a>
-      </li>
-      <li>
-       <a class="link color-primary" href="pages/accesorios.html">ACCESORIOS</a>
-      </li>
-      <li>
-       <a class="link color-primary" href="pages/beauty.html">BEAUTY</a>
-      </li>
-      <li>
-       <a class="link color-primary" href="pages/promociones.html">PROMOCIONES</a>
-      </li>
-      <li>
-       <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
-      </li>
+  <div>
+   <nav id="nav"  class="nav">
+    <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
+    <label for="abrir-cerrar" class="toggle-button">
+     <span class="cerrar" title="Cerrar">Cerrar</span>
+     <span class="abrir" title="Abrir">Abrir</span>
+    </label>
+    <!-- Listas y links de Navegación -->
+    <ul class="nav-menu">
+     <li class="link">
+      <a class="link" href="pages/newin.html">NEW IN</a>
+     </li>
+     <li>
+      <a class="link olor-primary" href="pages/coleccion.html">COLECCION </a>
+     </li>
+     <li>
+      <a class="link color-primary" href="pages/accesorios.html">ACCESORIOS</a>
+     </li>
+     <li>
+      <a class="link color-primary" href="pages/beauty.html">BEAUTY</a>
+     </li>
+     <li>
+      <a class="link color-primary" href="pages/promociones.html">PROMOCIONES</a>
+     </li>
+     <li>
+      <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
+     </li>
      </ul>
      <ul class="nav-menu-color-primary" >
       <li >
@@ -71,26 +71,26 @@
     <h2> INSPIRATE</h2>
    </div>
    <div class="textolook">
-   <div class="wrapper">
-    <p>
+    <div class="wrapper">
+     <p>
       <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
-    </p>
-    <div class="row">
-      <div class="col">
-        <div class="collapse multi-collapse" id="multiCollapseExample1">
+      <button class="btn btn-primary" type="button" data-bs-toggle="collapse"    data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
+       </p>
+       <div class="row">
+        <div class="col">
+         <div class="collapse multi-collapse" id="multiCollapseExample1">
           <div class="card card-body">
-            Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-          </div>
-        </div>
+           Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
       </div>
+     </div>
+   </div>
       <div class="col">
-        <div class="collapse multi-collapse" id="multiCollapseExample2">
-          <div class="card card-body">
-            Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-          </div>
+       <div class="collapse multi-collapse" id="multiCollapseExample2">
+        <div class="card card-body">
+         Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
         </div>
-      </div>
+       </div>
+     </div>
     </div>
     <img class="fotos-altas" src=img/look-pantfluo.jpg alt="INSPIRACION LOOKS">
      <p>
@@ -102,14 +102,14 @@
        <div class="card card-body">
         Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
       </div>
-      </div>
      </div>
+    </div>
     <div>
      <img class="fotos-altas" src=img/home-pants-topfluorose.jpg alt="INSPIRACION LOOKS">
      <p>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-          ¿TEAM NIGHT?     
-      </button>
+      ¿TEAM NIGHT?     
+    </button>
      </p>
      <div style="min-height: 120px;">
       <div class="collapse collapse-horizontal" id="collapseWidthExample">
@@ -160,7 +160,7 @@
      <input type="email" name="" id="">
     </div>
    </form>
-   <ul>
+   <ul class="footer-contacto">
     <li>
      <p>Contactanos</p>
     </li>
