--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -93,7 +93,7 @@
    <div>
     <img class="fotos-cuadradas "src="../img/parfunarmaniocean.jpg" alt="COLECCION">
     <img class="fotos-cuadradas"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="https://dummyimage.com/300x150/c9c2af/fff" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/parfumskydigioia2.jpg" alt="COLECCION">
    </div>
    <div class="pagina-principal">
     <div>
@@ -108,13 +108,13 @@
    </div> 
     <img class="fotos-beauty1 imagen" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-parfumcacharel.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-flower-bykenzo.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-flower--by-kenzo-eau-de-vie-eau-de-parfum.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-kenzo.jpg" alt="COLECCION">
     <img class="fotos-beauty"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
     <img class="fotos-beauty imagen"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
-    <img class="fotos-beauty"src="../img/beauty-calvinkleinwomenrosa.jpg" alt="COLECCION">
+    <img class="fotos-beauty efecto"src="../img/parfumgivenchybordo.jpg" alt="COLECCION">
     <img class="fotos-beauty efecto"src="../img/beauty-parfumlinterditrojogivenchy.jpg" alt="COLECCION">
-    <img class="fotos-beauty1"src="../img/beauty-parfumlinterdit-givenchy.jpg" alt="COLECCION">
+    <img class="fotos-beauty1"src="../img/parfumlinterdit.jpg" alt="COLECCION">
     <img class="fotos-beauty1 imagen" src="../img/beauty-parfumfragancias-de-Lacoste.jpg" alt="COLECCION">
    </div>
  </main>
