--- a/pages/items/iniciarsesion.html
+++ b/pages/items/iniciarsesion.html
@@ -129,20 +129,31 @@
     <a href="https://www.whatsapp.com/?lang=es"target="_blank"><img class="socialmedia" src="../../img/whatsappcrema.jpg" alt="Whatsapp"></a>
    </li>
   </ul>
-  <ul>
-   <li>
-    <p>Seguinos</p>
-   </li>
-   <li id="contacto-home">
-    <a href="https://es-la.facebook.com/"target="_blank"><img class="socialmedia" src="../../img/facecrema.jpg" alt="Facebook"></a>
-   </li>
-   <li>
-    <a href="https://www.instagram.com/"target="_blank"><img class="socialmedia" src="../../img/igcrema.jpg" alt="Instagram"></a>
-   </li>
-   <li>
-    <a href="https://open.spotify.com/"target="_blank"><img class="socialmedia" src="../../img/spotifycrema.jpg" alt="Spotify"></a>
-   </li>
-  </ul>
+  <ul >
+    <li>
+     <p>Contactanos</p>
+    </li>
+    <li>
+     <a href="https://m.facebook.com/messenger/?locale=es_LA"target="_blank"><img  class="socialmedia"src="../../img/messengercrema.jpg" alt="Messenger"></a>
+    </li>
+    <li>
+     <a href="https://www.whatsapp.com/?lang=es"target="_blank"><img class="socialmedia" src="../../img/whatsappcrema.jpg" alt="Whatsapp"></a>
+    </li>
+   </ul>
+   <ul>
+    <li>
+     <p>Seguinos</p>
+    </li>
+    <li id="contacto-home">
+     <a href="https://es-la.facebook.com/"target="_blank"><img class="socialmedia" src="../../img/facecrema.jpg" alt="Facebook"></a>
+    </li>
+    <li>
+     <a href="https://www.instagram.com/"target="_blank"><img class="socialmedia" src="../../img/igcrema.jpg" alt="Instagram"></a>
+    </li>
+    <li>
+     <a href="https://open.spotify.com/"target="_blank"><img class="socialmedia" src="../../img/spotifycrema.jpg" alt="Spotify"></a>
+    </li>
+   </ul>
    <p>Quiero devolver mi pedido. Be-todos los derechos reservados. Terminos y Condiciones</p>
  </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
