--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
   <title>Be Yourself</title>
  </head>
  <body>
-  <header id="header">
-   <div class="header-banner">
-    <b> Envío gratis desde $10.000</b>
-   </div>
-   <!-- logo/Home -->
+  <div class="container">
+   <header id="header">
+    <div class="header-banner">
+     <b> Envío gratis desde $10.000</b>
+    </div>
+    <!-- logo/Home -->
      <a href=""><img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE"></a>
-  </header>
-  <div>
+   </header>
+   <div>
    <nav id="nav"  class="nav">
     <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
     <label for="abrir-cerrar" class="toggle-button">
@@ -187,6 +188,7 @@
    </ul>
     <p><span> Quiero devolver mi pedido.</span> Be-todos los derechos reservados. Terminos y Condiciones</p>
   </footer>
+ </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
